fix: page and navigation menu spacing on mobile

--- a/web-application/client/components/generic/NavigationMenu/NavigationMenu.css
+++ b/web-application/client/components/generic/NavigationMenu/NavigationMenu.css
@@ -17,8 +17,8 @@
 .navigation-menu a:visited,
 .navigation-menu a:active {
     display: block;
-    padding: 10px;
     color: var(--primary-color-darkest);
+    padding: 10px;
 }
 .navigation-menu a:hover {
     background-color: var(--primary-color-light);
@@ -43,7 +43,7 @@
     display: inline-block;
 }
 
-@media (width <= 1220px) {
+@media (700px < width <= 1220px) {
 
     .navigation-menu {
         text-align: center;
@@ -51,6 +51,44 @@
 
     .navigation-menu li {
         display: inline-block;
+    }
+
+    .navigation-menu a:link,
+    .navigation-menu a:visited,
+    .navigation-menu a:active {
+        padding: 0;
+    }
+    
+    .navigation-menu .navigation-menu__item .nav-text {
+        display: block;
+        font-size: 10px;
+    }
+
+    .navigation-menu .navigation-menu__button .nav-text {
+        display: block;
+        font-size: 10px;
+    }
+
+}
+@media (width <= 700px) {
+
+    .navigation-menu {
+        text-align: center;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(47px, 1fr));
+        align-items: center;
+        justify-items: center;
+        padding: 0;
+    }
+
+    .navigation-menu li {
+        display: block;
+    }
+
+    .navigation-menu a:link,
+    .navigation-menu a:visited,
+    .navigation-menu a:active {
+        padding: 0;
     }
     
     .navigation-menu .navigation-menu__item .nav-text {
